ClojureCompiler/Generated/ClojureParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Clojure.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ClojureCompiler.Generated
{
    using System;
    using System.IO;
    using System.Text;
    using System.Diagnostics;
    using System.Collections.Generic;
    using Antlr4.Runtime;
    using Antlr4.Runtime.Atn;
    using Antlr4.Runtime.Misc;
    using Antlr4.Runtime.Tree;
    using DFA = Antlr4.Runtime.Dfa.DFA;

    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
    [System.CLSCompliant(false)]
    public partial class ClojureParser : Parser
    {
        protected static DFA[] decisionToDFA;
        protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
        public const int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, STRING = 21, FLOAT = 22, HEX = 23, BIN = 24, LONG = 25,
            BIGN = 26, CHAR_U = 27, CHAR_NAMED = 28, CHAR_ANY = 29, NIL = 30, BOOLEAN = 31, SYMBOL = 32,
            NS_SYMBOL = 33, PARAM_NAME = 34, TRASH = 35;
        public const int
            RULE_file = 0, RULE_form = 1, RULE_forms = 2, RULE_list = 3, RULE_vector = 4,
            RULE_map = 5, RULE_set = 6, RULE_reader_macro = 7, RULE_quote = 8, RULE_backtick = 9,
            RULE_unquote = 10, RULE_unquote_splicing = 11, RULE_tag = 12, RULE_deref = 13,
            RULE_gensym = 14, RULE_lambda = 15, RULE_meta_data = 16, RULE_var_quote = 17,
            RULE_host_expr = 18, RULE_discard = 19, RULE_dispatch = 20, RULE_regex = 21,
            RULE_literal = 22, RULE_string = 23, RULE_hex = 24, RULE_bin = 25, RULE_bign = 26,
            RULE_number = 27, RULE_character = 28, RULE_named_char = 29, RULE_any_char = 30,
            RULE_u_hex_quad = 31, RULE_nil = 32, RULE_keyword = 33, RULE_simple_keyword = 34,
            RULE_macro_keyword = 35, RULE_symbol = 36, RULE_simple_sym = 37, RULE_ns_symbol = 38,
            RULE_param_name = 39;
        public static readonly string[] ruleNames = {
            "file", "form", "forms", "list", "vector", "map", "set", "reader_macro",
            "quote", "backtick", "unquote", "unquote_splicing", "tag", "deref", "gensym",
            "lambda", "meta_data", "var_quote", "host_expr", "discard", "dispatch",
            "regex", "literal", "string", "hex", "bin", "bign", "number", "character",
            "named_char", "any_char", "u_hex_quad", "nil", "keyword", "simple_keyword",
            "macro_keyword", "symbol", "simple_sym", "ns_symbol", "param_name"
        };

        private static readonly string[] _LiteralNames = {
            null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'#{'", "'''", "'`'",
            "'~'", "'~@'", "'^'", "'@'", "'#'", "'#('", "'#^'", "'#''", "'#+'", "'#_'",
            "':'", null, null, null, null, null, null, null, null, null, "'nil'"
        };
        private static readonly string[] _SymbolicNames = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, "STRING", "FLOAT",
            "HEX", "BIN", "LONG", "BIGN", "CHAR_U", "CHAR_NAMED", "CHAR_ANY", "NIL",
            "BOOLEAN", "SYMBOL", "NS_SYMBOL", "PARAM_NAME", "TRASH"
        };
        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary =>  DefaultVocabulary;

        public override string GrammarFileName => "Clojure.g4";

        public override string[] RuleNames => ruleNames;

        public override string SerializedAtn => new string(_serializedATN);

        static ClojureParser()
        {
            decisionToDFA = new DFA[_ATN.NumberOfDecisions];
            for (int i = 0; i < _ATN.NumberOfDecisions; i++)
            {
                decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
            }
        }

        public ClojureParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

        public ClojureParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
        : base(input, output, errorOutput)
        {
            Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
        }

        public partial class FileContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ClojureParser.Eof, 0); }
            [System.Diagnostics.DebuggerNonUserCode]
            public FormContext[] form()
            {
                return GetRuleContexts<FormContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public FormContext form(int i)
            {
                return GetRuleContext<FormContext>(i);
            }
            public FileContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_file; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterFile(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitFile(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitFile(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public FileContext file()
        {
            FileContext _localctx = new FileContext(Context, State);
            EnterRule(_localctx, 0, RULE_file);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 83;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << STRING) | (1L << FLOAT) | (1L << HEX) | (1L << BIN) | (1L << LONG) | (1L << BIGN) | (1L << CHAR_U) | (1L << CHAR_NAMED) | (1L << CHAR_ANY) | (1L << NIL) | (1L << BOOLEAN) | (1L << SYMBOL) | (1L << NS_SYMBOL) | (1L << PARAM_NAME))) != 0))
                    {
                        {
                            {
                                State = 80;
                                form();
                            }
                        }
                        State = 85;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                    State = 86;
                    Match(Eof);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class FormContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public LiteralContext literal()
            {
                return GetRuleContext<LiteralContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public ListContext list()
            {
                return GetRuleContext<ListContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public VectorContext vector()
            {
                return GetRuleContext<VectorContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public MapContext map()
            {
                return GetRuleContext<MapContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public Reader_macroContext reader_macro()
            {
                return GetRuleContext<Reader_macroContext>(0);
            }
            public FormContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_form; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterForm(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitForm(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitForm(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public FormContext form()
        {
            FormContext _localctx = new FormContext(Context, State);
            EnterRule(_localctx, 2, RULE_form);
            try
            {
                State = 93;
                ErrorHandler.Sync(this);
                switch (Interpreter.AdaptivePredict(TokenStream, 1, Context))
                {
                    case 1:
                        EnterOuterAlt(_localctx, 1);
                        {
                            State = 88;
                            literal();
                        }
                        break;
                    case 2:
                        EnterOuterAlt(_localctx, 2);
                        {
                            State = 89;
                            list();
                        }
                        break;
                    case 3:
                        EnterOuterAlt(_localctx, 3);
                        {
                            State = 90;
                            vector();
                        }
                        break;
                    case 4:
                        EnterOuterAlt(_localctx, 4);
                        {
                            State = 91;
                            map();
                        }
                        break;
                    case 5:
                        EnterOuterAlt(_localctx, 5);
                        {
                            State = 92;
                            reader_macro();
                        }
                        break;
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class FormsContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public FormContext[] form()
            {
                return GetRuleContexts<FormContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public FormContext form(int i)
            {
                return GetRuleContext<FormContext>(i);
            }
            public FormsContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_forms; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterForms(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitForms(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitForms(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public FormsContext forms()
        {
            FormsContext _localctx = new FormsContext(Context, State);
            EnterRule(_localctx, 4, RULE_forms);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 98;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << STRING) | (1L << FLOAT) | (1L << HEX) | (1L << BIN) | (1L << LONG) | (1L << BIGN) | (1L << CHAR_U) | (1L << CHAR_NAMED) | (1L << CHAR_ANY) | (1L << NIL) | (1L << BOOLEAN) | (1L << SYMBOL) | (1L << NS_SYMBOL) | (1L << PARAM_NAME))) != 0))
                    {
                        {
                            {
                                State = 95;
                                form();
                            }
                        }
                        State = 100;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class ListContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public FormsContext forms()
            {
                return GetRuleContext<FormsContext>(0);
            }
            public ListContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_list; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterList(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitList(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitList(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public ListContext list()
        {
            ListContext _localctx = new ListContext(Context, State);
            EnterRule(_localctx, 6, RULE_list);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 101;
                    Match(T__0);
                    State = 102;
                    forms();
                    State = 103;
                    Match(T__1);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class VectorContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public FormsContext forms()
            {
                return GetRuleContext<FormsContext>(0);
            }
            public VectorContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_vector; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterVector(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitVector(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitVector(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public VectorContext vector()
        {
            VectorContext _localctx = new VectorContext(Context, State);
            EnterRule(_localctx, 8, RULE_vector);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 105;
                    Match(T__2);
                    State = 106;
                    forms();
                    State = 107;
                    Match(T__3);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class MapContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public FormContext[] form()
            {
                return GetRuleContexts<FormContext>();
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public FormContext form(int i)
            {
                return GetRuleContext<FormContext>(i);
            }
            public MapContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_map; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterMap(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitMap(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitMap(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public MapContext map()
        {
            MapContext _localctx = new MapContext(Context, State);
            EnterRule(_localctx, 10, RULE_map);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 109;
                    Match(T__4);
                    State = 115;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << STRING) | (1L << FLOAT) | (1L << HEX) | (1L << BIN) | (1L << LONG) | (1L << BIGN) | (1L << CHAR_U) | (1L << CHAR_NAMED) | (1L << CHAR_ANY) | (1L << NIL) | (1L << BOOLEAN) | (1L << SYMBOL) | (1L << NS_SYMBOL) | (1L << PARAM_NAME))) != 0))
                    {
                        {
                            {
                                State = 110;
                                form();
                                State = 111;
                                form();
                            }
                        }
                        State = 117;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                    State = 118;
                    Match(T__5);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SetContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public FormsContext forms()
            {
                return GetRuleContext<FormsContext>(0);
            }
            public SetContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_set; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterSet(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitSet(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSet(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SetContext set()
        {
            SetContext _localctx = new SetContext(Context, State);
            EnterRule(_localctx, 12, RULE_set);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 120;
                    Match(T__6);
                    State = 121;
                    forms();
                    State = 122;
                    Match(T__5);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class Reader_macroContext : ParserRuleContext
        {
            [System.Diagnostics.DebuggerNonUserCode]
            public LambdaContext lambda()
            {
                return GetRuleContext<LambdaContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public Meta_dataContext meta_data()
            {
                return GetRuleContext<Meta_dataContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public RegexContext regex()
            {
                return GetRuleContext<RegexContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public Var_quoteContext var_quote()
            {
                return GetRuleContext<Var_quoteContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public Host_exprContext host_expr()
            {
                return GetRuleContext<Host_exprContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public SetContext set()
            {
                return GetRuleContext<SetContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public TagContext tag()
            {
                return GetRuleContext<TagContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public DiscardContext discard()
            {
                return GetRuleContext<DiscardContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public DispatchContext dispatch()
            {
                return GetRuleContext<DispatchContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public DerefContext deref()
            {
                return GetRuleContext<DerefContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public QuoteContext quote()
            {
                return GetRuleContext<QuoteContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public BacktickContext backtick()
            {
                return GetRuleContext<BacktickContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public UnquoteContext unquote()
            {
                return GetRuleContext<UnquoteContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public Unquote_splicingContext unquote_splicing()
            {
                return GetRuleContext<Unquote_splicingContext>(0);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public GensymContext gensym()
            {
                return GetRuleContext<GensymContext>(0);
            }
            public Reader_macroContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_reader_macro; } }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void EnterRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.EnterReader_macro(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override void ExitRule(IParseTreeListener listener)
            {
                IClojureListener typedListener = listener as IClojureListener;
                if (typedListener != null) typedListener.ExitReader_macro(this);
            }
            [System.Diagnostics.DebuggerNonUserCode]
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                IClojureVisitor<TResult> typedVisitor = visitor as IClojureVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitReader_macro(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public Reader_macroContext reader_macro()
        {
            Reader_macroContext _localctx = new Reader_macroContext(Context, State);
            EnterRule(_localctx, 14, RULE_reader_macro);
            try
            {
                State = 139;
                ErrorHandler.Sync(this);
                switch (Interpreter.AdaptivePredict(TokenStream, 4, Context))
                {
                    case 1:
                        EnterOuterAlt(_localctx, 1);
                        {
                            State = 124;
                            lambda();
                        }
                        break;
                    case 2:
                        EnterOuterAlt(_localctx, 2);
                        {
                            State = 125;
                            meta_data();
                        }
                        break;
                    case 3:
                        EnterOuterAlt(_localctx, 3);
                        {
                            State = 126;
                            regex();
                        }
                        break;
                    case 4:
                        EnterOuterAlt(_localctx, 4);
                        {
                            State = 127;
                            var_quote();
                        }
                        break;
                    case 5:
                        EnterOuterAlt(_localctx, 5);
                        {
                            State = 128;
                            host_expr();
                        }
                        break;
                    case 6:
                        EnterOuterAlt(_localctx, 6);
                        {
                            State = 129;
                            set();
                        }
                        break;
                    case 7:
                        EnterOuterAlt(_localctx, 7);
                        {
                            State = 130;
                            tag();
                        }
                        break;
                    case 8:
                        EnterOuterAlt(_localctx, 8);
                        {
                            State = 131;
                            discard();
                        }
                        break;
                    case 9:
                        EnterOuterAlt(_localctx, 9);
                        {
                            State = 132;
                            dispatch();
                        }
                        break;
                    case 10:
                        EnterOuterAlt(_localctx, 10);
                        {
                            State = 133;
                            deref();
                        }
                        break;
                    case 11:
                        EnterOuterAlt(_localctx, 11);
                        {
                            State = 134;
                            quote();
                        }
                        break;
                    case 12:
                        EnterOuterAlt(_localctx, 12);
                        {
                            State = 135;
                            backtick();
                        }
                        break;
                    case 13:
                        EnterOuterAlt(_localctx, 13);
                        {
                            State = 136;
                            unquote();
                        }
                        break;
                    case 14:
                        EnterOuterAlt(_localctx, 14);
                        {
                            State = 137;
                            unquote_splicing();
                        }
                        break;
                    case 15:
                        EnterOuterAlt(_localctx, 15);
                        {
                            State = 138;
                            gensym();
                        }
                        break;
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }
